force-app/main/default/objects/ESignature_Envelope__c/ESignature_Envelope__c.object-meta.xml
<CustomObject>
    <description>PDF-first e-signature package object.</description>
    <label>E-Signature Envelope</label>
    <nameField>
        <displayFormat>PESENV-{000000}</displayFormat>
        <label>E-Signature Envelope Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Signature Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>