force-app/main/default/objects/ESignature_Envelope__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Reason the e-signature envelope was canceled before completion.</description>
    <label>Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>