force-app/main/default/objects/ESignature_Envelope__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>E-Signature Envelopes</relationshipLabel>
    <relationshipName>ESignature_Case_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>