force-app/main/default/objects/ESignature_Envelope__c/fields/Completed_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Completed_Fields_JSON__c</fullName>
    <label>Completed Fields JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>