force-app/main/default/objects/ESignature_Envelope__c/fields/Envelope_Status__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Status__c</fullName>
    <description>Status of the PDF e-signature envelope. Stored as text to avoid picklist deployment/value conflicts across orgs.</description>
    <label>Envelope Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>