force-app/main/default/objects/ESignature_Envelope__c/fields/Final_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_ContentVersion_Id__c</fullName>
    <label>Final ContentVersion Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>