force-app/main/default/objects/ESignature_Envelope__c/fields/Parent_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Api_Name__c</fullName>
    <label>Parent Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>