force-app/main/default/objects/ESignature_Envelope__c/fields/Public_Signing_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Signing_URL__c</fullName>
    <label>Public Signing URL</label>
    <type>Url</type>
</CustomField>