force-app/main/default/objects/ESignature_Envelope__c/fields/Secure_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Secure_Token_Hash__c</fullName>
    <label>Secure Token Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>