force-app/main/default/objects/ESignature_Envelope__c/fields/Sender_User__c.field-meta.xml
<CustomField>
    <fullName>Sender_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>E-Signature Envelopes</relationshipLabel>
    <relationshipName>ESignature_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>