force-app/main/default/objects/ESignature_Envelope__c/fields/Signature_Image_Data_Url__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_Data_Url__c</fullName>
    <label>Signature Image Data URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>