force-app/main/default/objects/ESignature_Envelope__c/fields/Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Method__c</fullName>
    <label>Signature Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Typed</fullName>
                <default>true</default>
                <label>Typed</label>
            </value>
            <value>
                <fullName>Drawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>