force-app/main/default/objects/ESignature_Envelope__c/fields/Source_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_ContentVersion_Id__c</fullName>
    <label>Source ContentVersion Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>