force-app/main/default/objects/ESignature_Envelope__c/fields/Source_File_Title__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Title__c</fullName>
    <label>Source File Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>