force-app/main/default/objects/ESignature_Envelope__c/fields/Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>Viewed_At__c</fullName>
    <label>Viewed At</label>
    <type>DateTime</type>
</CustomField>