force-app/main/default/objects/ESignature_Envelope__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>E-Signature Envelopes</relationshipLabel>
    <relationshipName>E_Signature_Work_Order_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>